Static images now work again after they were accidentally broken when I added Gzip Compression. Fixed a topic desync and eliminates a number of possible race conditions in the caches. Optimised global.js by swapping out some of the unnecessary jQuery with native javascript code. Updated jQuery to version 3.1.11 Fixed the CSS on the areyousure and error templates.

--- a/templates/areyousure.html
+++ b/templates/areyousure.html
@@ -1,6 +1,6 @@
 {{template "header.html" . }}
 <div class="rowblock">
-	<div class="rowitem"><a>Are you sure?</a></div>
+	<div class="rowitem rowhead"><a>Are you sure?</a></div>
 </div>
 <div class="rowblock">
 	<div class="rowitem passive">{{.Something.Message}}<br /><br />
