--- a/templates/error.html
+++ b/templates/error.html
@@ -1,6 +1,6 @@
 {{template "header.html" . }}
 <div class="rowblock">
-	<div class="rowitem"><a>An error has occured</a></div>
+	<div class="rowitem rowhead"><a>An error has occured</a></div>
 </div>
 <div class="rowblock">
 	<div class="rowitem passive">{{.Something}}</div>
