--- a/templates/header.html
+++ b/templates/header.html
@@ -3,9 +3,8 @@
 	<head>
 		<title>{{.Title}}</title>
 		<link href="/static/main.css" rel="stylesheet" type="text/css">
-		<script type="text/javascript" src="/static/jquery-1.12.3.min.js"></script>
-		<script type="text/javascript">
-		var session = "{{.CurrentUser.Session}}";
+		<script type="text/javascript" src="/static/jquery-3.1.1.min.js"></script>
+		<script type="text/javascript">var session = "{{.CurrentUser.Session}}";
 		</script>
 		<script type="text/javascript" src="/static/global.js"></script>
 		<meta name="viewport" content="width=device-width,initial-scale = 1.0, maximum-scale=1.0,user-scalable=no" />
@@ -13,4 +12,5 @@
 	<body>
 		<div class="container">
 {{template "menu.html" .}}
-<div id="back"><div id="main">{{range .NoticeList}}<div class="alert">{{.}}</div>{{end}}
+<div id="back"><div id="main">
+{{range .NoticeList}}<div class="alert">{{.}}</div>{{end}}
