Added the InternalErrorJS and LocalErrorJS error handler functions. Hid the themes which aren't under construction yet from the Theme Manager. Fixed a bug in the BBCode parser where every post had ten spaces appended to them. Added the get_reply() internal API function for plugins to make use of. Added the bell to the theme. Fixed some bits of the Cosmo theme where the rowhead wasn't appearing. Added a "Don't have an account?" link to the login page.
I began work on the alerts system, I took a little break, so it's a little further behind than you might expect, but it shouldn't take too long for me to finish it up.
I haven't finished the back-end portions of it yet, so there's not much to see yet!

--- a/templates/account-menu.html
+++ b/templates/account-menu.html
@@ -1,5 +1,5 @@
 <div class="colblock_left">
-	<div class="rowitem"><a>My Account</a></div>
+	<div class="rowitem rowhead"><a>My Account</a></div>
 	<div class="rowitem passive"><a href="/user/edit/avatar/">Change Avatar</a></div>
 	<div class="rowitem passive"><a href="/user/edit/username/">Change Username</a></div>
 	<div class="rowitem passive"><a href="/user/edit/critical/">Change Password</a></div>
