--- a/templates/account-own-edit-avatar.html
+++ b/templates/account-own-edit-avatar.html
@@ -1,7 +1,7 @@
 {{template "header.html" . }}
 {{template "account-menu.html" . }}
 <div class="colblock_right">
-	<div class="rowitem"><a>Edit Avatar</a></div>
+	<div class="rowitem rowhead"><a>Edit Avatar</a></div>
 </div>
 {{ if .CurrentUser.Avatar }}
 <div class="colblock_right">
