--- a/templates/account-own-edit-email.html
+++ b/templates/account-own-edit-email.html
@@ -1,7 +1,7 @@
 {{template "header.html" . }}
 {{template "account-menu.html" . }}
 <div class="colblock_right">
-	<div class="rowitem"><a>Emails</a></div>
+	<div class="rowitem rowhead"><a>Emails</a></div>
 </div>
 <div class="colblock_right">
 	{{range .ItemList}}
