--- a/templates/account-own-edit-username.html
+++ b/templates/account-own-edit-username.html
@@ -1,7 +1,7 @@
 {{template "header.html" . }}
 {{template "account-menu.html" . }}
 <div class="colblock_right">
-	<div class="rowitem"><a>Edit Username</a></div>
+	<div class="rowitem rowhead"><a>Edit Username</a></div>
 </div>
 <div class="colblock_right">
 	<form action="/user/edit/username/submit/" method="post">
