--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,6 @@
 {{template "header.html" . }}
 <div class="rowblock">
-	<div class="rowitem"><a>Login</a></div>
+	<div class="rowitem rowhead"><a>Login</a></div>
 </div>
 <div class="rowblock">
 	<form action="/accounts/login/submit/" method="post">
@@ -13,7 +13,8 @@
 			<div class="formitem"><input name="password" type="password" autocomplete="current-password" placeholder="*****" /></div>
 		</div>
 		<div class="formrow">
-			<div class="formitem"><button name="login-button" class="formbutton">Login</div></div>
+			<div class="formitem"><button name="login-button" class="formbutton">Login</div>
+			<div class="formitem" style="color: #505050; font-size: 12px; font-weight: normal; float: right;">Don't have an account?</div>
 		</div>
 	</form>
 </div>
