--- a/templates/register.html
+++ b/templates/register.html
@@ -1,6 +1,6 @@
 {{template "header.html" . }}
 <div class="rowblock">
-	<div class="rowitem"><a>Create Account</a></div>
+	<div class="rowitem rowhead"><a>Create Account</a></div>
 </div>
 <div class="rowblock">
 	<form action="/accounts/create/submit/" method="post">
