--- a/templates/create-topic.html
+++ b/templates/create-topic.html
@@ -1,6 +1,6 @@
 {{template "header.html" . }}
 <div class="rowblock">
-	<div class="rowitem"><a>Create Topic</a></div>
+	<div class="rowitem rowhead"><a>Create Topic</a></div>
 </div>
 <div class="rowblock">
 	<form action="/topic/create/submit/" method="post">
