--- a/themes/cosmo/public/main.css
+++ b/themes/cosmo/public/main.css
@@ -50,10 +50,7 @@ li
 	padding-left: 1px;
 	padding-right: 1px;
 	
-	border: 1px solid #7a7a7a;
-	border-top: none;
-	border-bottom: none;
-	border-left: none;
+	border-right: 1px solid #7a7a7a;
 	font-weight: normal;
 	color: white;
 }
@@ -63,16 +60,10 @@ li a
 	color: white;
 	text-decoration: none;
 }
-li:hover a, li a:hover, li a:link, li a:visited
-{
-	color: white;
-	text-decoration: none;
-}
 li:hover
  {
 	background: rgba(10,10,10,0.5);
 	font-weight: normal;
-	color: white;
 }
 
 .menu_right
@@ -85,16 +76,27 @@ li:hover
 	padding-right: 10px;
 	height: 38px;
 	text-align: center;
+	border-left: 1px solid #7a7a7a;
 }
 
-.menu_right:hover
-{
-	border: #282828 1px solid;
-	background: #282828;
-	padding-left: 10px;
-	padding-right: 10px;
-	height: 38px;
+.menu_alerts .alert_counter {
+	position: relative;
+	font-size: 9px;
+	top: -24px;
+	background-color: rgb(140,0,0);
+	color: white;
+	padding: 3px;
+	width: 14px;
+	left: 10px;
+	line-height: 8px;
+	border-radius: 20px;
+	padding-top: 2.5px;
+	height: 14px;
+	opacity: 0.8;
 	text-align: center;
+}
+.menu_alerts .alert_counter:empty {
+	display: none;
 }
 
 #footer
