I'm still working on alerts. I've worked out the client-side UI for Cosmo, the UI will be tweaked for the other themes shortly. The client-side JS also now pulls the alerts from the server.
The errors are now sent properly via JSON.
The success JSON messages are now sent properly.
Optimised the message for guests.
Added the opthead class for adding a nice Cosmo specific enhancement.

--- a/templates/menu.html
+++ b/templates/menu.html
@@ -15,7 +15,10 @@
 		<li class="menu_left menu_register"><a href="/accounts/create/">Register</a></li>
 		<li class="menu_left menu_login"><a href="/accounts/login/">Login</a></li>
 		{{end}}
-		<li class="menu_right menu_alerts">🔔︎<div class="alert_counter">{{if not .CurrentUser.Loggedin}}1{{end}}</div></li>
+		<li class="menu_right menu_alerts">🔔︎
+			<div class="alert_counter"></div>
+			<div class="alertList"></div>
+		</li>
 	</ul>
 	</div>
 	</div>
