--- a/templates/forums.html
+++ b/templates/forums.html
@@ -1,4 +1,7 @@
 {{template "header.html" . }}
+<div class="rowblock opthead">
+	<div class="rowitem rowhead"><a>Forums</a></div>
+</div>
 <div class="rowblock">
 	{{range .ItemList}}<div class="rowitem">
 		<a href="/forum/{{.ID}}" style="font-size: 20px;position:relative;top: -2px;font-weight: normal;text-transform: none;">{{.Name}}</a>
