You now get an alert when someone replies to one of your topics. Greatly improved the Alert CSS for every theme. Fixed a bug where alerts aren't closed when the page is extremely short and you click outside it's bounds. Fixed a bug where liking a topic didn't reload the cached data. Fixed a few misnamed HTML tags.

--- a/templates/account-own-edit-username.html
+++ b/templates/account-own-edit-username.html
@@ -14,7 +14,7 @@
 			<div class="formitem"><input name="account-new-username" type="text" /></div>
 		</div>
 		<div class="formrow">
-			<div class="formitem"><button name="account-button" class="formbutton">Update</div></div>
+			<div class="formitem"><button name="account-button" class="formbutton">Update</button></div>
 		</div>
 	</form>
 </div>
