--- a/templates/account-own-edit.html
+++ b/templates/account-own-edit.html
@@ -18,7 +18,7 @@
 			<div class="formitem"><input name="account-confirm-password" type="password" placeholder="*****" /></div>
 		</div>
 		<div class="formrow">
-			<div class="formitem"><button name="account-button" class="formbutton">Update</div></div>
+			<div class="formitem"><button name="account-button" class="formbutton">Update</button></div>
 		</div>
 	</form>
 </div>
