--- a/templates/create-topic.html
+++ b/templates/create-topic.html
@@ -18,7 +18,7 @@
 			<div class="formitem"><textarea name="topic-content" placeholder="Insert content here"></textarea></div>
 		</div>
 		<div class="formrow">
-			<div class="formitem"><button name="topic-button" class="formbutton">Create Topic</div></div>
+			<div class="formitem"><button name="topic-button" class="formbutton">Create Topic</button></div>
 		</div>
 	</form>
 </div>
