--- a/themes/tempra-conflux/public/main.css
+++ b/themes/tempra-conflux/public/main.css
@@ -89,22 +89,28 @@ li a
 .selectedAlert:hover {
 	background: white;
 	color: black;
+	font-weight: bold;
+}
+.selectedAlert .alert_counter {
+	display: none;
 }
 .menu_alerts .alertList {
 	display: none;
+	text-transform: none;
 }
 .selectedAlert .alertList {
 	position: absolute;
-	top: 41px;
+	top: 43px;
 	display: block;
 	background: white;
 	font-size: 10px;
 	line-height: 16px;
-	width: 135px;
-	right: -15px;
+	width: 156px;
+	right: calc(5% + 7px);
 	border-top: 1px solid #ccc;
 	border-left: 1px solid #ccc;
 	border-right: 1px solid #ccc;
+	border-bottom: 1px solid #ccc;
 }
 .alertItem {
 	padding: 8px;
@@ -113,21 +119,25 @@ li a
 }
 .alertItem.withAvatar {
 	/*background-image: url('/uploads/avatar_1.jpg');*/
-	background-size: auto 56px;
+	background-size: 36px;
 	background-repeat: no-repeat;
-	text-align: right;
+	text-align: center;
 	padding-right: 12px;
+	padding-left: 42px;
 	height: 46px;
 }
 .alertItem.withAvatar:not(:last-child) {
 	border-bottom: 1px solid rgb(230,230,230);
 }
-.alertItem.withAvatar .text {
+.alertItem .text {
 	overflow: hidden;
 	text-overflow: ellipsis;
-	float: right;
-	width: calc(100% - 20px);
 	height: 30px;
+	width: 100%;
+	color: black;
+}
+.alertItem .text.smaller {
+	font-size: 9px;
 }
 
 .container
@@ -514,17 +524,13 @@ button.username
 
 /* Media Queries from Simple. Probably useless in Conflux */
 @media (max-width: 880px) {
-	li
-	{
-		height: 25px;
-		font-size: 15px;
-		padding-left: 7px;
-	}
+	li { height: 25px; font-size: 15px; padding-left: 7px; }
 	ul { height: 26px; margin-top: 8px; }
 	.menu_left { padding-right: 7px; }
 	.menu_right { padding-right: 7px; }
 	body { padding-left: 4px; padding-right: 4px; margin: 0px !important; width: 100% !important; height: 100% !important; overflow-x: hidden; }
 	.container { width: auto; }
+	.selectedAlert .alertList { top: 33px; right: 4px; }
 }
 
 @media (max-width: 810px) {
@@ -547,7 +553,8 @@ button.username
 	ul { height: 24px; }
 	.menu_left { padding-right: 5px; }
 	.menu_right { padding-right: 5px; }
-	.menu_create_topic { display: none;}
+	.menu_create_topic { display: none; }
+	.menu_alerts { padding-left: 4px; padding-right: 4px; }
 	.hide_on_mobile { display: none; }
 	.prev_button, .next_button { top: auto;bottom: 5px; }
 }
