--- a/themes/cosmo-conflux/public/main.css
+++ b/themes/cosmo-conflux/public/main.css
@@ -450,6 +450,15 @@ button .big { padding: 6px; }*/
 	font-size: 15px;
 }
 
+.postQuote {
+	padding: 5px;
+	border: 1px solid rgb(200,200,200);
+	display: inline-block;
+	margin-bottom: 5px;
+	width: 100%;
+	background: rgb(250,250,250);
+}
+
 .threadHidden { background: orange; }
 .threadDeleted { background: rgba(255,0,0,0.5); }
 
