--- a/themes/tempra-cursive/public/main.css
+++ b/themes/tempra-cursive/public/main.css
@@ -6,19 +6,15 @@
 
 body
 {
-	font-family: arial;
+	font-family: cursive;
 	padding-bottom: 8px;
-	background-image: url('/static/test_bg2.svg');
-	background-size: cover;
 }
 
 /* Patch for Edge */
 @supports (-ms-ime-align:auto) {
-.user_content { font-family: Segoe UI Emoji, arial; }
+	.user_content { font-family: Segoe UI Emoji, arial; }
 }
 
-/*.move_left{float: left;position: relative;left: 50%;}
-.move_right{float: left;position: relative;left: -50%;}*/
 ul
 {
 	padding-left: 0px;
@@ -49,6 +45,8 @@ li a
 	float: left;
 	border-right: 1px solid #ccc;
 	padding-right: 10px;
+	font-family: cursive;
+	padding-top: 2px;
 }
 .menu_right
 {
@@ -89,10 +87,6 @@ li a
 .selectedAlert:hover {
 	background: white;
 	color: black;
-	font-weight: bold;
-}
-.selectedAlert .alert_counter {
-	display: none;
 }
 .menu_alerts .alertList {
 	display: none;
@@ -105,7 +99,7 @@ li a
 	background: white;
 	font-size: 10px;
 	line-height: 16px;
-	width: 156px;
+	width: 135px;
 	right: calc(5% + 7px);
 	border-top: 1px solid #ccc;
 	border-left: 1px solid #ccc;
@@ -118,26 +112,21 @@ li a
 	text-overflow: ellipsis;
 }
 .alertItem.withAvatar {
-	/*background-image: url('/uploads/avatar_1.jpg');*/
-	background-size: 36px;
+	background-size: auto 56px;
 	background-repeat: no-repeat;
-	text-align: center;
+	text-align: right;
 	padding-right: 12px;
-	padding-left: 42px;
 	height: 46px;
 }
 .alertItem.withAvatar:not(:last-child) {
 	border-bottom: 1px solid rgb(230,230,230);
 }
-.alertItem .text {
+.alertItem.withAvatar .text {
 	overflow: hidden;
 	text-overflow: ellipsis;
+	float: right;
+	width: calc(100% - 20px);
 	height: 30px;
-	width: 100%;
-	color: black;
-}
-.alertItem .text.smaller {
-	font-size: 9px;
 }
 
 .container
@@ -155,10 +144,7 @@ li a
 	padding: 0px;
 	padding-top: 0px;
 }
-.rowblock:empty
-{
-	display: none;
-}
+.rowblock:empty { display: none; }
 
 .colblock_left
 {
@@ -178,15 +164,10 @@ li a
 	overflow: hidden;
 	word-wrap: break-word;
 }
-.colblock_left:empty
-{
-	display: none;
-}
-.colblock_right:empty
-{
-	display: none;
-}
+.colblock_left:empty { display: none; }
+.colblock_right:empty { display: none; }
 
+.rowhead { font-family: cursive; }
 .rowitem
 {
 	width: 100%;
@@ -244,22 +225,21 @@ li a
 	text-decoration: none;
 	color: black;
 }
-.colitem a:hover
-{
-	color: silver;
-}
+.colitem a:hover { color: silver; }
 
 .formrow
 {
 	width: 100%;
 	background-color: white;
 }
+
 /* Clearfix */
 .formrow:before, .formrow:after {
 	content: " ";
 	display: table;
 }
 .formrow:after { clear: both; }
+
 .formrow:not(:last-child)
 {
 	border-bottom: 1px dotted #ccc;
@@ -274,18 +254,11 @@ li a
 	padding-bottom: 8px;
 	font-weight: bold;
 }
-.formitem:first-child
-{
-	font-weight: bold;
-}
-.formitem:not(:last-child)
-{
-	border-right: 1px dotted #ccc;
-}
-.formitem.invisible_border
-{
-	border: none;
-}
+
+.formitem:first-child { font-weight: bold; }
+.formitem:not(:last-child) { border-right: 1px dotted #ccc; }
+.formitem.invisible_border { border: none; }
+
 /* Mostly for textareas */
 .formitem:only-child { width: 100%; }
 .formitem textarea
@@ -321,49 +294,35 @@ button
 }
 .topic_status:empty { display: none; }
 
-.rowhead {
-	background: linear-gradient(to bottom, white, hsl(0, 0%, 93%));
-}
-.topic_sticky_head {
-	background-color: #FFFFEA;
-	background: linear-gradient(to bottom, hsl(60, 70%, 96%), hsl(60, 70%, 89%)), url('/static/fabric-base-simple-alpha.png');
-}
-.topic_closed_head {
-	background-color: #eaeaea;
-	background: linear-gradient(to bottom, #eaeaea, hsl(0,0%,79%));
-}
-
 .username
 {
 	text-transform: none;
 	margin-left: 0px;
-	padding-left: 4px;
-	padding-right: 4px;
+	padding-left: 0px;
+	padding-right: 0px;
 	padding-top: 2px;
 	padding-bottom: 2px;
 	color: #505050; /* 80,80,80 */
-	background-color: #FFFFFF;
-	border-style: dotted;
-	border-color: #505050; /* 232,232,232. All three RGB colours being the same seems to create a shade of gray */
-	border-width: 1px;
 	font-size: 15px;
+	background: none;
 }
 button.username
 {
 	position: relative;
 	top: -0.25px;
 }
+.username.level { color: #303030; }
+.username.real_username { color: #404040; font-size: 17px; padding-right: 4px; }
+.username.real_username:hover { color: black; }
 
-.postQuote {
-	border: rgb(200,200,210);
-	background: rgb(245,245,255);
-	padding: 3px;
-	margin: 0px;
+.tag-text {
+	padding-top: 23px;
 	display: inline-block;
-	width: 100%;
-	margin-bottom: 5px;
-	border-style: solid;
-	border-width: 1px;
+}
+
+.post_item > .username {
+	padding-top: 23px;
+	display: inline-block;
 }
 
 .tag-mini
@@ -382,11 +341,36 @@ button.username
 	font-size: 10px;
 }
 
-.show_on_edit
-{
-	display: none;
+.post_item > .mod_button > button {
+	font-size: 15px;
+	color: #202020;
+	opacity: 0.7;
+	border: none;
+}
+.post_item > .mod_button > button:hover {
+	opacity: 0.9;
 }
 
+.postQuote {
+	border: 1px solid #ccc;
+    background: white;
+    padding: 3px;
+    margin: 0px;
+    display: inline-block;
+    width: 100%;
+    margin-bottom: 5px;
+}
+
+.level {
+	float: right;
+	color: #505050;
+	border-left: none;
+	padding-left: 3px;
+	padding-right: 5px;
+	font-size: 16px;
+}
+
+.show_on_edit { display: none; }
 .alert
 {
 	display: block;
@@ -410,107 +394,6 @@ button.username
 	margin-bottom: 8px;
 	background-color: #FEB7CC;
 }
-
-/* Tempra Conflux */
-.user_content {
-	padding: 5px;
-	margin-top: 3px;
-	margin-bottom: 0;
-	background: white;
-	min-height: 145px;
-	padding-bottom: 0;
-	width: 100%;
-}
-.user_content.nobuttons {
-	min-height: 168px;
-}
-
-.button_container {
-	border-top: solid 1px #eaeaea;
-	border-spacing: 0px;
-	border-collapse: collapse;
-	padding: 0;
-	margin: 0;
-	margin-top: 3px;
-	display: block;
-	height: 20px;
-}
-
-.action_button {
-	display: block;
-	float: left;
-	border-right: solid 1px #eaeaea;
-	color: #505050;
-	font-size: 13px;
-	padding-top: 2px;
-	padding-bottom: 2px;
-	padding-left: 5px;
-	padding-right: 5px;
-}
-.action_button_right {
-	float: right;
-	border-left: solid 1px #eaeaea;
-}
-
-.simple { background-color: white; }
-.post_item:not(.simple) {
-	background-color: #eaeaea;
-}
-.post_item {
-	padding-top: 4px;
-	padding-left: 5px;
-	clear: both;
-	border-bottom: none !important;
-	padding-right: 4px;
-	padding-bottom: 2px;
-}
-.post_item:last-child {
-	padding-bottom: 7px;
-}
-.post_tag {
-	margin-top: 0px;
-	text-align: center;
-	color: #505050;
-	display: block;
-	font-size: 13px;
-}
-.the_name {
-	margin-top: 3px;
-	text-align: center;
-	color: #505050;
-	display: block;
-}
-
-.userinfo {
-	background: white;
-	width: 132px;
-	padding: 2px;
-	margin-top: 2px;
-	float: left;
-	position: sticky;
-	top: 4px;
-	box-shadow:0 1px 2px rgba(0,0,0,.1);
-}
-.userinfo .avatar_item {
-	background-repeat: no-repeat, repeat-y;
-	background-size: 128px;
-	width: 128px;
-	height: 100%;
-	min-height: 128px;
-	border-style: solid;
-	border-color: #eaeaea;
-	border-width: 1px;
-}
-
-.content_container {
-	background: white;
-	margin-left: 137px;
-	min-height: 128px;
-	margin-bottom: 0;
-	margin-right: 3px;
-	box-shadow:0 1px 2px rgba(0,0,0,.1);
-}
-
 .prev_button, .next_button {
 	position: fixed;
 	top: 50%;
@@ -524,6 +407,7 @@ button.username
 	padding-right: 5px;
 	z-index: 100;
 }
+
 .prev_button a, .next_button a {
 	line-height: 28px;
 	margin-top: 2px;
@@ -535,7 +419,6 @@ button.username
 .prev_button { left: 14px; }
 .next_button { right: 14px; }
 
-/* Media Queries from Simple. Probably useless in Conflux */
 @media (max-width: 880px) {
 	li { height: 25px; font-size: 15px; padding-left: 7px; }
 	ul { height: 26px; margin-top: 8px; }
@@ -547,12 +430,12 @@ button.username
 }
 
 @media (max-width: 810px) {
-	li
-	{
-		font-weight: normal;
-		text-transform: none;
-	}
+	li { font-weight: normal; text-transform: none; }
 	.rowitem { text-transform: none; }
+	/*.rowhead { font-family: arial; }
+	.menu_left { font-family: arial; }*/
+	body { font-family: arial; }
+	.level { font-size: 17px; }
 }
 
 @media (max-width: 620px) {
@@ -566,10 +449,10 @@ button.username
 	ul { height: 24px; }
 	.menu_left { padding-right: 5px; }
 	.menu_right { padding-right: 5px; }
-	.menu_create_topic { display: none; }
+	.menu_create_topic { display: none;}
 	.menu_alerts { padding-left: 4px; padding-right: 4px; }
 	.hide_on_mobile { display: none; }
-	.prev_button, .next_button { top: auto;bottom: 5px; }
+	.prev_button, .next_button { top: auto; bottom: 5px; }
 }
 
 @media (max-width: 470px) {
@@ -596,32 +479,19 @@ button.username
 		position: relative;
 		top: -14px;
 	}
+	.post_item > .mod_button > button {
+		opacity: 1;
+	}
 	.post_item > .real_username {
 		position: absolute;
 		top: 70px;
 		float: left;
-		margin-top: 0px;
+		margin-top: -2px;
 		padding-top: 3px !important;
 		margin-right: 2px;
 		width: 60px;
 		font-size: 15px;
+		text-align: center;
 	}
-	.userinfo {
-		width: 70px;
-	}
-	.userinfo .avatar_item {
-		background-size: 64px;
-		width: 64px;
-		min-height: 64px;
-	}
-	.content_container {
-		margin-left: 73px;
-		min-height: inherit !important;
-	}
-	.user_content { min-height: 76.5px !important; font-size: 15px; }
-	.user_content.nobuttons { min-height: 100.5px !important; }
-	.the_name { font-size: 15px; }
-	.post_tag { font-size: 12px; }
-	
 	.container { width: 100% !important; }
 }
