--- a/themes/tempra-simple/public/main.css
+++ b/themes/tempra-simple/public/main.css
@@ -316,6 +316,12 @@ button.username
 .username.level { color: #303030; }
 .username.real_username { color: #404040; font-size: 17px; }
 .username.real_username:hover { color: black; }
+
+.post_item > .username {
+    margin-top: 44.2px;
+    display: inline-block;
+}
+
 .tag-mini
 {
 	text-transform: none;
@@ -339,6 +345,25 @@ button.username
 }
 .post_item > .mod_button > button:hover {
 	opacity: 0.9;
+}
+
+.postQuote {
+	border: 1px solid #ccc;
+    background: white;
+    padding: 3px;
+    margin: 0px;
+    display: inline-block;
+    width: 100%;
+    margin-bottom: 5px;
+}
+
+.level {
+	float: right;
+	color: #505050;
+	border-left: none;
+	padding-left: 5px;
+	padding-right: 5px;
+	font-size: 17px;
 }
 
 .show_on_edit { display: none; }
@@ -401,11 +426,7 @@ button.username
 }
 
 @media (max-width: 810px) {
-	li
-	{
-		font-weight: normal;
-		text-transform: none;
-	}
+	li { font-weight: normal; text-transform: none; }
 	.rowitem { text-transform: none; }
 }
 
@@ -450,9 +471,7 @@ button.username
 		position: relative;
 		top: -14px;
 	}
-	.post_item > .mod_button > button {
-		opacity: 1;
-	}
+	.post_item > .mod_button > button { opacity: 1; }
 	.post_item > .real_username {
 		position: absolute;
 		top: 70px;
